tenant-onboard/services/application/apps/order/k8s/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      nodeSelector: #karpenters
        saas-boost: eks-boost    
      containers:
        - name: order
          image: ORDER_SERVICE_ECR_REPO:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          ports:
            - containerPort: 3010
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3010
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: ELB_URL
      http:
        paths:
          - backend:
              service:
                name: order-service
                port:
                  number: 80
            path: /TENANT_PATH/api/orders
            pathType: Prefix
